--- a/res/css/import/mixins/_animations.scss
+++ b/res/css/import/mixins/_animations.scss
@@ -13,20 +13,29 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "variables";
 
-.mdl-animation--default {
-    transition-timing-function: $animation-curve-default;
-}
+/* Variables */
+$animation-curve-fast-out-slow-in: cubic-bezier(0.4, 0, 0.2, 1) !default;
+$animation-curve-linear-out-slow-in: cubic-bezier(0, 0, 0.2, 1) !default;
+$animation-curve-fast-out-linear-in: cubic-bezier(0.4, 0, 1, 1) !default;
+$animation-curve-default: $animation-curve-fast-out-slow-in !default;
 
-.mdl-animation--fast-out-slow-in {
+@mixin material-animation-fast-out-slow-in($duration:0.2s) {
+    transition-duration: $duration;
     transition-timing-function: $animation-curve-fast-out-slow-in;
 }
 
-.mdl-animation--linear-out-slow-in {
+@mixin material-animation-linear-out-slow-in($duration:0.2s) {
+    transition-duration: $duration;
     transition-timing-function: $animation-curve-linear-out-slow-in;
 }
 
-.mdl-animation--fast-out-linear-in {
+@mixin material-animation-fast-out-linear-in($duration:0.2s) {
+    transition-duration: $duration;
     transition-timing-function: $animation-curve-fast-out-linear-in;
+}
+
+@mixin material-animation-default($duration:0.2s) {
+    transition-duration: $duration;
+    transition-timing-function: $animation-curve-default;
 }
