--- a/res/css/import/resets/_h5bp.scss
+++ b/res/css/import/resets/_h5bp.scss
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "variables";
+@import "../variables";
 
 /*
  * What follows is the result of much research on cross-browser styling.
