--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -1,22 +1,18 @@
-@import "import/material/color-definitions";
+@import "import/variables";
+@import "import/palette";
+@import "import/mixins";
+@import "import/resets";
+@import "import/prism";
 
-$color-primary: $palette-grey-900;
-$color-primary-dark: $color-black;
-$color-accent: #dd1155;
-$color-primary-contrast: $color-dark-contrast;
-$color-accent-contrast: $color-dark-contrast;
 
 $footer-bg-color: $palette-grey-100;
 $footer-color: rgba($color-black, 0.54);
 
-//@import "import/material";
-//@import "import/materialdesignicons";
-@import "import/prism";
-
+/*
 // 3
-$font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600, first title 500, card titles 400
-$font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600
-$font-family-body: "Kreon", "Georgia", "Times New Roman", serif !default; //make fonts slightly thinner ~300
+$header-font: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600, first title 500, card titles 400
+$button-font: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600
+$body-font: "Kreon", "Georgia", "Times New Roman", serif !default; //make fonts slightly thinner ~300
 
 ////////////
 
@@ -39,6 +35,7 @@ $font-family-header: "Montserrat", "Roboto", "Helvetica", "Arial", sans-serif !d
 $font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600, first title 500, card titles 400
 $font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600
 $font-family-body: "Slabo 27px", "Georgia", "Times New Roman", serif !default;
+*/
 
 body {
     background: $palette-grey-50;
@@ -62,22 +59,25 @@ blockquote {
 
 h1, h2, h3, .mdl-typography--display-1, .mdl-typography--display-2, .mdl-typography--display-3,
 .mdl-typography--display-4, .mdl-typography--display-5 {
-    font-family: $font-family-header;
-  font-weight: 600;
+    font-family: $header-font;
+    font-weight: 600;
 }
 
 .mdl-button {
-  font-family: $font-family-button;
-  font-weight: 600;
+    font-family: $button-font;
+    font-weight: 600;
 }
 
 body, .mdl-typography--headline, .mdl-typography--subhead {
-  font-family: $font-family-body;
-  font-weight: 300;
+    font-weight: 300;
 }
 
 .mdl-typography--subhead {
     font-size: 17px;
+}
+
+.mdl-layout-title {
+    font-family: $header-font;
 }
 
 /* Layout */
@@ -88,10 +88,6 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
 .mdl-layout__drawer-button > i {
     position: relative;
     top: 2px;
-}
-
-.mdl-layout-title {
-    font-family: $font-family-header;
 }
 
 /* Navigation */
@@ -114,8 +110,8 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
     position: relative;
     background: no-repeat local center center;
     background-size: cover;
-  min-height: 400px;
-  height: 100vh;
+    min-height: 400px;
+    height: 100vh;
     text-align: center;
     box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14), inset 0 -3px 14px 2px rgba($color-black, .12), inset 0 -5px 5px -3px rgba($color-black, .2);
     margin-bottom: 32px;
@@ -129,7 +125,7 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
         > h1 {
             text-decoration: none;
             color: $color-white;
-          font-weight: 500;
+            font-weight: 500;
             a {
                 text-decoration: none;
                 color: $color-white;
@@ -141,7 +137,7 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
                 color: rgba($color-white, .7);
                 font-weight: 400;
                 font-style: italic;
-                &.mdl-button{
+                &.mdl-button {
                     color: $color-white;
                     font-weight: 500;
                     font-style: normal;
@@ -156,7 +152,7 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
             width: 96px;
             height: 96px;
             i.material-icons {
-                transform: translate(-48px,-44px);
+                transform: translate(-48px, -44px);
                 text-align: center;
                 font-size: 96px;
                 line-height: 96px;
@@ -185,22 +181,21 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
     > .mdl-card {
         min-height: 24px;
         align-self: flex-start;
-      > .mdl-card__media > img {
-        width: 100%;
-      }
-      > .mdl-card__title {
-        padding-bottom: 0;
-        > .mdl-card__title-text {
-          font-size: 25px;
-          font-family: $font-family-header;
-          font-weight: 400;
-          line-height: 1.25;
+        > .mdl-card__media > img {
+            width: 100%;
         }
-      }
-      > .mdl-card__supporting-text {
-        font-size: 17px;
-        line-height: 1.5;
-      }
+        > .mdl-card__title {
+            padding-bottom: 0;
+            > .mdl-card__title-text {
+                font-size: 25px;
+                font-weight: 400;
+                line-height: 1.25;
+            }
+        }
+        > .mdl-card__supporting-text {
+            font-size: 17px;
+            line-height: 1.5;
+        }
     }
     > .cta-cell {
         position: relative;
@@ -271,45 +266,6 @@ body, .mdl-typography--headline, .mdl-typography--subhead {
         margin: 8px auto;
         border-radius: 4px;
     }
-    .author {
-        position: relative;
-        min-height: 96px;
-        margin: 8px 0;
-        img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 96px;
-            height: 96px;
-            border-radius: 50%;
-        }
-        a {
-            color: #000;
-            text-decoration: none;
-            font-weight: 400;
-        }
-        h4 {
-            margin-left: 112px;
-            margin-bottom: 8px;
-            font-family: $font-family-header;
-        }
-        p {
-            margin-left: 112px;
-            margin-bottom: 8px;
-            &.author-meta {
-                margin-left: 108px;
-                font-size: 18px;
-                color: rgba(0, 0, 0, .54);
-                a {
-                    color: rgba(0, 0, 0, .54);
-                }
-                i.material-icons {
-                    position: relative;
-                    top: 4px;
-                }
-            }
-        }
-    }
 }
 
 img.author-thumb {
@@ -319,7 +275,7 @@ img.author-thumb {
 }
 
 .read-next section {
-        text-align: center;
+    text-align: center;
 }
 
 nav.pagination {
