--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
     <link rel="import" href="/bower_components/paper-card/paper-card.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
     <link rel="import" href="/bower_components/material-design-icons/material-design-icons.html">
+    <link rel="import" href="/bower_components/prism-element/prism-highlighter.html">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium|Roboto+Mono:400,500,700&amp;lang=en" rel="stylesheet">
@@ -62,9 +63,9 @@
     </style>
 
 </head>
-<body>
+<body class="fullbleed layout vertical">
 
-<app-drawer-layout>
+<app-drawer-layout class="fullbleed layout vertical">
 
     <app-drawer id="drawer" swipe-open>
         <app-toolbar>{{ site.name }}</app-toolbar>
@@ -87,7 +88,7 @@
     <app-header-layout>
 
         <app-header condenses reveals effects="waterfall">
-            <app-toolbar>
+            <paper-toolbar>
                 <paper-icon-button icon="menu" onclick="drawer.toggle()"></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
                 <div class="top-level-navigation">
@@ -101,7 +102,7 @@
                     </a>
                     {% endfor %}
                 </div>
-            </app-toolbar>
+            </paper-toolbar>
         </app-header>
 
         <div class="content">
@@ -128,7 +129,6 @@
 
 <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script defer src="/res/js/prism.min.js"></script>
 <script defer src="/res/js/jquery.scrollto.min.js"></script>
 <script defer src="/res/js/scripts.min.js"></script>
 </body>
