--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,10 @@
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
     <link rel="import" href="/bower_components/material-design-icons/material-design-icons.html">
     <link rel="import" href="/bower_components/prism-element/prism-highlighter.html">
+    <link rel="import" href="/bower_components/paper-material/paper-material.html">
+    <link rel="import" href="/bower_components/paper-drawer-panel/paper-drawer-panel.html">
+    <link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
+    <link rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium|Roboto+Mono:400,500,700&amp;lang=en" rel="stylesheet">
@@ -63,9 +67,9 @@
     </style>
 
 </head>
-<body class="fullbleed layout vertical">
+<body>
 
-<app-drawer-layout class="fullbleed layout vertical">
+<paper-drawer-panel>
 
     <app-drawer id="drawer" swipe-open>
         <app-toolbar>{{ site.name }}</app-toolbar>
@@ -85,25 +89,23 @@
         </paper-menu>
     </app-drawer>
 
-    <app-header-layout>
+    <paper-header-panel main mode="waterfall">
 
-        <app-header condenses reveals effects="waterfall">
-            <paper-toolbar>
-                <paper-icon-button icon="menu" onclick="drawer.toggle()"></paper-icon-button>
-                <h1 main-title>{{ site.name }}</h1>
-                <div class="top-level-navigation">
-                    {% for navigation in site.data.navigation.items %}
-                    <a href="{{ navigation.link }}" tabindex="-1" target="_blank" title="{{ navigation.title }}">
-                        {% if navigation.icon %}
-                        <paper-icon-button icon="{{ navigation.icon }}"></paper-icon-button>
-                        {% else %}
-                        <paper-button>{{ navigation.title }}</paper-button>
-                        {% endif %}
-                    </a>
-                    {% endfor %}
-                </div>
-            </paper-toolbar>
-        </app-header>
+        <paper-toolbar>
+            <paper-icon-button icon="menu" onclick="drawer.toggle()"></paper-icon-button>
+            <h1 main-title>{{ site.name }}</h1>
+            <div class="top-level-navigation">
+                {% for navigation in site.data.navigation.items %}
+                <a href="{{ navigation.link }}" tabindex="-1" target="_blank" title="{{ navigation.title }}">
+                    {% if navigation.icon %}
+                    <paper-icon-button icon="{{ navigation.icon }}"></paper-icon-button>
+                    {% else %}
+                    <paper-button>{{ navigation.title }}</paper-button>
+                    {% endif %}
+                </a>
+                {% endfor %}
+            </div>
+        </paper-toolbar>
 
         <div class="content">
 
@@ -123,9 +125,9 @@
 
         </div>
 
-    </app-header-layout>
+    </paper-header-panel>
 
-</app-drawer-layout>
+</paper-drawer-panel>
 
 <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
