--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
 
     <paper-header-panel main mode="waterfall">
 
-        <paper-toolbar>
+        <app-toolbar>
             <paper-icon-button icon="menu" onclick="drawer.toggle()"></paper-icon-button>
             <h1 main-title>{{ site.name }}</h1>
             <div class="top-level-navigation">
@@ -105,7 +105,7 @@
                 </a>
                 {% endfor %}
             </div>
-        </paper-toolbar>
+        </app-toolbar>
 
         <div class="content">
 
