--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,9 +69,9 @@
 </head>
 <body>
 
-<paper-drawer-panel>
+<paper-drawer-panel id="drawer-panel" responsive-width="1280px">
 
-    <app-drawer id="drawer" swipe-open>
+    <app-drawer id="drawer" swipe-open drawer>
         <app-toolbar>{{ site.name }}</app-toolbar>
         <paper-menu>
             {% for navigation in site.data.navigation.items %}
@@ -89,10 +89,9 @@
         </paper-menu>
     </app-drawer>
 
-    <paper-header-panel>
+    <paper-header-panel main mode="waterfall">
 
-        <app-header effects="waterfall, blend-background">
-            <app-toolbar>
+        <paper-toolbar>
                 <paper-icon-button icon="menu" onclick="drawer.toggle()"></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
                 <div class="top-level-navigation">
@@ -106,8 +105,7 @@
                     </a>
                     {% endfor %}
                 </div>
-            </app-toolbar>
-        </app-header>
+        </paper-toolbar>
 
         <div class="content">
 
@@ -131,7 +129,6 @@
 
 </paper-drawer-panel>
 
-<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script defer src="/res/js/jquery.scrollto.min.js"></script>
 <script defer src="/res/js/scripts.min.js"></script>
