--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
 
 <paper-drawer-panel id="drawer-panel" responsive-width="1280px">
 
-    <div id="drawer" swipe-open drawer>
+    <div id="drawer" drawer>
         <app-toolbar>{{ site.name }}</app-toolbar>
         <paper-menu>
             {% for navigation in site.data.navigation.items %}
@@ -91,8 +91,9 @@
 
     <paper-header-panel main mode="waterfall">
 
-        <paper-toolbar>
-            <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
+        <app-header effects="waterfall">
+            <app-toolbar>
+                <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
                 <div class="top-level-navigation">
                     {% for navigation in site.data.navigation.items %}
@@ -105,7 +106,8 @@
                     </a>
                     {% endfor %}
                 </div>
-        </paper-toolbar>
+            </app-toolbar>
+        </app-header>
 
         <div class="content">
 
