--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,30 +69,8 @@
 </head>
 <body>
 
-<paper-drawer-panel id="drawer-panel" responsive-width="1280px">
-
-    <div id="drawer" drawer>
-        <app-toolbar>{{ site.name }}</app-toolbar>
-        <paper-menu>
-            {% for navigation in site.data.navigation.items %}
-            <a href="{{ navigation.link }}" tabindex="-1">
-                {% if navigation.icon %}
-                <paper-icon-item>
-                    <iron-icon icon="{{ navigation.icon }}" item-icon></iron-icon>
-                    {{ navigation.title }}
-                </paper-icon-item>
-                {% else %}
-                <paper-item>{{ navigation.title }}</paper-item>
-                {% endif %}
-            </a>
-            {% endfor %}
-        </paper-menu>
-    </div>
-
-    <paper-header-panel main mode="waterfall">
-
-        <app-header effects="waterfall">
-            <app-toolbar>
+<app-header effects="waterfall">
+    <paper-toolbar>
                 <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
                 <div class="top-level-navigation">
@@ -106,30 +84,44 @@
                     </a>
                     {% endfor %}
                 </div>
-            </app-toolbar>
+    </paper-toolbar>
         </app-header>
 
-        <div class="content">
+<app-drawer id="drawer" swipe-open>
+    <paper-toolbar>{{ site.name }}</paper-toolbar>
+    <paper-menu>
+        {% for navigation in site.data.navigation.items %}
+        <a href="{{ navigation.link }}" tabindex="-1">
+            {% if navigation.icon %}
+            <paper-icon-item>
+                <iron-icon icon="{{ navigation.icon }}" item-icon></iron-icon>
+                {{ navigation.title }}
+            </paper-icon-item>
+            {% else %}
+            <paper-item>{{ navigation.title }}</paper-item>
+            {% endif %}
+        </a>
+        {% endfor %}
+    </paper-menu>
+</app-drawer>
 
-            <main>
-                {{ content }}
-            </main>
+<div class="content">
 
-            <footer>
-                <p>
-                    © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }}
-                </p>
-                <p>
-                    <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
-                    <a href="/privacy" title="Privacy">Privacy</a>
-                </p>
-            </footer>
+    <main>
+        {{ content }}
+    </main>
 
-        </div>
+    <footer>
+        <p>
+            © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }}
+        </p>
+        <p>
+            <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
+            <a href="/privacy" title="Privacy">Privacy</a>
+        </p>
+    </footer>
 
-    </paper-header-panel>
-
-</paper-drawer-panel>
+</div>
 
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script defer src="/res/js/jquery.scrollto.min.js"></script>
