--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,8 @@
     <link rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium|Roboto+Mono:400,500,700&amp;lang=en" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium|Roboto+Mono:400,500,700&amp;lang=en"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:700|Arimo:400,700|Buenard:400,700|Cabin:400,500,600|Inconsolata:700|Kreon:300,400,700|Montserrat|Poppins:500,600,700|Roboto+Slab:300,400|Slabo+13px|Slabo+27px|Work+Sans:300,400,500,600,700"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -69,9 +70,31 @@
 </head>
 <body>
 
-<app-header effects="waterfall">
-    <paper-toolbar>
-                <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
+<app-drawer-layout fullbleed>
+
+    <app-drawer swipe-open>
+        <paper-toolbar>{{ site.name }}</paper-toolbar>
+        <paper-menu>
+            {% for navigation in site.data.navigation.items %}
+            <a href="{{ navigation.link }}" tabindex="-1">
+                {% if navigation.icon %}
+                <paper-icon-item>
+                    <iron-icon icon="{{ navigation.icon }}" item-icon></iron-icon>
+                    {{ navigation.title }}
+                </paper-icon-item>
+                {% else %}
+                <paper-item>{{ navigation.title }}</paper-item>
+                {% endif %}
+            </a>
+            {% endfor %}
+        </paper-menu>
+    </app-drawer>
+
+    <app-header-layout>
+
+        <app-header effects="waterfall">
+            <paper-toolbar>
+                <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
                 <div class="top-level-navigation">
                     {% for navigation in site.data.navigation.items %}
@@ -84,47 +107,35 @@
                     </a>
                     {% endfor %}
                 </div>
-    </paper-toolbar>
+            </paper-toolbar>
         </app-header>
 
-<app-drawer id="drawer" swipe-open>
-    <paper-toolbar>{{ site.name }}</paper-toolbar>
-    <paper-menu>
-        {% for navigation in site.data.navigation.items %}
-        <a href="{{ navigation.link }}" tabindex="-1">
-            {% if navigation.icon %}
-            <paper-icon-item>
-                <iron-icon icon="{{ navigation.icon }}" item-icon></iron-icon>
-                {{ navigation.title }}
-            </paper-icon-item>
-            {% else %}
-            <paper-item>{{ navigation.title }}</paper-item>
-            {% endif %}
-        </a>
-        {% endfor %}
-    </paper-menu>
-</app-drawer>
+        <div class="content">
 
-<div class="content">
+            <main>
+                {{ content }}
+            </main>
 
-    <main>
-        {{ content }}
-    </main>
+            <footer>
+                <p>
+                    © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }}
+                </p>
+                <p>
+                    <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
+                    <a href="/privacy" title="Privacy">Privacy</a>
+                </p>
+            </footer>
 
-    <footer>
-        <p>
-            © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }}
-        </p>
-        <p>
-            <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
-            <a href="/privacy" title="Privacy">Privacy</a>
-        </p>
-    </footer>
+        </div>
 
-</div>
+    </app-header-layout>
+
+</app-drawer-layout>
 
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script defer src="/res/js/jquery.scrollto.min.js"></script>
 <script defer src="/res/js/scripts.min.js"></script>
+
 </body>
+
 </html>
