--- a/res/css/import/_variables.scss
+++ b/res/css/import/_variables.scss
@@ -12,4 +12,6 @@ $color-primary-dark: $color-black;
 $color-accent: #dd1155;
 $text-color-primary: rgba($color-black, 0.87);
 $text-color-secondary: rgba($color-black, 0.54);
+$text-color-primary-inverse: $color-white;
+$text-color-secondary-inverse: rgba($color-white, 0.7);
 $text-link-color: $color-accent !default;
