--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
 
     <app-header-layout>
 
-        <app-header effects="waterfall">
+        <app-header fixed effects="waterfall">
             <app-toolbar>
                 <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
