--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,10 +73,12 @@
 <app-drawer-layout fullbleed responsiveWidth="1024px">
 
     <app-drawer swipe-open>
-        <app-toolbar>{{ site.name }}</app-toolbar>
+        <app-toolbar>
+            <h1 main-title>{{ site.name }}</h1>
+        </app-toolbar>
         <paper-menu>
             {% for navigation in site.data.navigation.items %}
-            <a href="{{ navigation.link }}" tabindex="-1">
+            <a href="{{ navigation.link }}" tabindex="-1" target="_blank" title="{{ navigation.title }}">
                 {% if navigation.icon %}
                 <paper-icon-item>
                     <iron-icon icon="{{ navigation.icon }}" item-icon></iron-icon>
@@ -92,7 +94,7 @@
 
     <app-header-layout>
 
-        <app-header fixed effects="waterfall">
+        <app-header fixed effects="waterfall blend-background" scalar="0.6">
             <app-toolbar>
                 <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
