--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
 
 <app-drawer-layout fullbleed responsiveWidth="1024px">
 
-    <app-drawer swipe-open>
+    <app-drawer swipe-open elevation="16">
         <app-toolbar>
             <h1 main-title>{{ site.name }}</h1>
         </app-toolbar>
