--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -52,12 +52,9 @@ app-drawer-layout {
         app-header {
             background-color: rgba($color-black, 0.12);
 
-            --app-header-background-rear-layer {
-                background: $color-primary;
+            --app-header-background-rear-layer: #{'{ background: ' + $color-primary + '; }'} {
             }
-
-            --app-header-background-front-layer {
-                background: $color-accent;
+            --app-header-background-front-layer: #{'{ background: ' + $color-accent + '; }'} {
             }
 
             app-toolbar {
